--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
     - Módulo Projeto Não Orientado a Abordagens Específicas: Base/1.1.AbordagemNaoEspecifica.md
     - Módulo Processos, Metodologias, Abordagens: Base/1.2.ProcessosMetodologiasAbordagens.md
     - Participações - Base: Base/1.3.ParticipacoesBase.md
+    - Artefatos Independentes: Base/1.4.ArtefatosIndependentes.md
   - Modelagem:
     - Modelagem/index.md
     - Módulo Projeto Orientado a Abordagens Tradicionais: Modelagem/2.1.ModelagemTradicional.md
