--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,10 +44,17 @@ theme:
 nav:
   - Base:
     - Base/index.md
-    - Módulo Projeto Não Orientado a Abordagens Específicas: Base/1.1.AbordagemNaoEspecifica.md
-    - Módulo Processos, Metodologias, Abordagens: Base/1.2.ProcessosMetodologiasAbordagens.md
+    - Design Sprint: Base/DesignSprint.md
+    - Técnicas de Elicitação: 
+      - Base/ElicitacaoRequisitos.md
+      - Técnica1: Base/Tecnica1.md
+      - Técnica2: Base/Tecnica2.md
+    - Artefatos Independentes:
+      - Base/ArtefatosIndependentes.md
+      - Artefato1: Base/Artefato1.md
+      - Artefato2: Base/Artefato2.md
+    - Metodologia: Base/Metodologia.md
     - Participações - Base: Base/1.3.ParticipacoesBase.md
-    - Artefatos Independentes: Base/1.4.ArtefatosIndependentes.md
   - Modelagem:
     - Modelagem/index.md
     - Módulo Projeto Orientado a Abordagens Tradicionais: Modelagem/2.1.ModelagemTradicional.md
