--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,32 +46,22 @@ nav:
     - Base/index.md
     - Design Sprint: Base/DesignSprint.md
     - Técnicas de Elicitação: 
-      - Base/ElicitacaoRequisitos.md
+      - Base/TecnicasElicitacao/index.md
       - Técnica1: Base/Tecnica1.md
       - Técnica2: Base/Tecnica2.md
     - Artefatos Independentes:
-      - Base/ArtefatosIndependentes.md
-      - Artefato1: Base/Artefato1.md
-      - Artefato2: Base/Artefato2.md
+      - Base/ArtefatosIndependentes/index.md
+      - Heat Map: Base/ArtefatosIndependentes/Heatmap.md
+      - Cronograma: Base/ArtefatosIndependentes/Cronograma.md
+      - Mapa Mental: Base/ArtefatosIndependentes/MapaMental.md
     - Metodologia: Base/Metodologia.md
-    - Participações - Base: Base/1.3.ParticipacoesBase.md
+    - Participações - Base: Base/ParticipacoesBase.md
   - Modelagem:
     - Modelagem/index.md
-    - Módulo Projeto Orientado a Abordagens Tradicionais: Modelagem/2.1.ModelagemTradicional.md
-    - Notação UML Diagramas Estáticos: Modelagem/2.1.1.UMLEstaticos.md
-    - Notação UML Diagramas Dinâmicos: Modelagem/2.1.2.UMLDinamicos.md
-    - Participações - Modelagem: Modelagem/2.2.ParticipacoesModelagem.md
   - Padrões de Projeto:
     - PadroesDeProjeto/index.md
-    - Módulo Padrões de Projeto GRASPs: PadroesDeProjeto/3.1.GRASPs.md
-    - Módulo Padrões de Projeto GoFs: PadroesDeProjeto/3.2.GoFs.md
-    - Módulo Padrões de Projeto Extras: PadroesDeProjeto/3.3.PadroesExtra.md
-    - Participações - Padrões de Projeto: PadroesDeProjeto/3.4.ParticipacoesPadroes.md
   - Arquitetura de Software & Reutilização:
-    - Desenho de Software (Arquitetura & Reutilização de Software): ArquiteturaReutilizacao/index.md
-    - Módulo Estilos e Padrões Arquiteturais: ArquiteturaReutilizacao/4.1.PadroesArquiteturais.md
-    - Módulo Reutilização de Software: ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
-    - Participações - Arquitetura & Reutilização de Software: ArquiteturaReutilizacao/4.3.ParticipacoesArqReutilizacao.md
+    - ArquiteturaReutilizacao/index.md
   - Reuniões: 
     - AtasReunioes/index.md
     - 1ª Sprint: AtasReunioes/Sprint-1.md
