adicionar o caminho dos storyboards ao mkdocs
Co-authored-by: PauloVictorFS <paulovictor.fsousa11@yahoo.com.br>
Co-authored-by: NyndoND <renannpop11@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
       - Heat Map: Base/ArtefatosIndependentes/Heatmap.md
       - Cronograma: Base/ArtefatosIndependentes/Cronograma.md
       - Mapa Mental: Base/ArtefatosIndependentes/MapaMental.md
+      - Storyboard: Base/ArtefatosIndependentes/Storyboards.md
     - Metodologia: Base/Metodologia.md
     - Participações - Base: Base/ParticipacoesBase.md
   - Modelagem:
