--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,8 @@ nav:
     - Participações - Base: Base/ParticipacoesBase.md
   - Modelagem:
     - Modelagem/index.md
+    - Diagrama de implantação:  Modelagem/Diagram_de_Implatacao.md
+ 
   - Padrões de Projeto:
     - PadroesDeProjeto/index.md
   - Arquitetura de Software & Reutilização:
