REvisão e correção final para entrega

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,11 +69,13 @@ nav:
     - Modelagem Estática:
       - Modelagem/ModelagemEstatica/index.md
       - Diagrama de Classes: Modelagem/ModelagemEstatica/DiagramaDeClasses.md
+      - Diagrama de Pacotes: Modelagem/ModelagemEstatica/DiagramaDePacotes.md
       - Diagrama de Implantacao: Modelagem/ModelagemEstatica/DiagramaDeImplantacao.md
     - Modelagem Dinâmica:
       - Modelagem/ModelagemDinamica/index.md
       - Diagrama de Sequencia: Modelagem/ModelagemDinamica/DiagramaDeSequencia.md
       - Diagrama de Atividades: Modelagem/ModelagemDinamica/DiagramaDeAtividades.md
+      - Diagrama de Estados: Modelagem/ModelagemDinamica/DiagramaDeEstados.md
     - Participações: Modelagem/Participacoes.md
   - Padrões de Projeto:
     - PadroesDeProjeto/index.md
