--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,9 @@ nav:
   - Padrões de Projeto:
     - PadroesDeProjeto/index.md
     - GoFs Criacionais: PadroesDeProjeto/GoFsCriacionais.md
-    - GoFs Estruturais: PadroesDeProjeto/GoFsEstruturais.md
+    - GoFs Estruturais: 
+      - Gof Estrutural 1: PadroesDeProjeto/GoFsEstruturais/GoFComportamental1.md
+      - Gof Estrutural 2: PadroesDeProjeto/GoFsEstruturais/GoFComportamental2.md
     - GoFs Comportamentais: PadroesDeProjeto/GoFsComportamentais.md
     - Participações: PadroesDeProjeto/Participacoes.md
   - Arquitetura de Software & Reutilização:
