--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Arquitetura e Desenho de Software
+site_name: MyGov
 
 site_description: Site de documentação do projeto MyGov
 
@@ -79,7 +79,9 @@ nav:
     - Participações: Modelagem/Participacoes.md
   - Padrões de Projeto:
     - PadroesDeProjeto/index.md
-    - GoFs Criacionais: PadroesDeProjeto/GoFsCriacionais.md
+    - GoFs Criacionais: 
+      - PadroesDeProjeto/GoFsCriacionais/index.md
+      - Factory Method: PadroesDeProjeto/GoFsCriacionais/FactoryMethod.md
     - GoFs Estruturais: 
       - Gof Estrutural 1: PadroesDeProjeto/GoFsEstruturais/GoFComportamental1.md
       - Gof Estrutural 2: PadroesDeProjeto/GoFsEstruturais/GoFComportamental2.md
