--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,13 +79,13 @@ nav:
     - Participações: Modelagem/Participacoes.md
   - Padrões de Projeto:
     - PadroesDeProjeto/index.md
-    - GoFs Criacionais: 
+    - GoF's Criacionais: 
       - PadroesDeProjeto/GoFsCriacionais/index.md
       - Factory Method: PadroesDeProjeto/GoFsCriacionais/FactoryMethod.md
-    - GoFs Estruturais: 
+    - GoF's Estruturais: 
       - Gof Estrutural 1: PadroesDeProjeto/GoFsEstruturais/GoFComportamental1.md
       - Gof Estrutural 2: PadroesDeProjeto/GoFsEstruturais/GoFComportamental2.md
-    - GoFs Comportamentais: PadroesDeProjeto/GoFsComportamentais.md
+    - GoF's Comportamentais: PadroesDeProjeto/GoFsComportamentais.md
     - Participações: PadroesDeProjeto/Participacoes.md
   - Arquitetura de Software & Reutilização:
     - ArquiteturaReutilizacao/index.md
