--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,7 @@ nav:
     - Participações: PadroesDeProjeto/Participacoes.md
   - Arquitetura de Software & Reutilização:
     - ArquiteturaReutilizacao/index.md
+    - Participações: ArquiteturaReutilizacao/Participacoes.md
   - Reuniões: 
     - AtasReunioes/index.md
     - 1ª Sprint: AtasReunioes/Sprint-1.md
