--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,3 +97,4 @@ nav:
   - Reuniões: 
     - AtasReunioes/index.md
     - 1ª Sprint: AtasReunioes/Sprint-1.md
+    - 3ª Sprint: AtasReunioes/Sprint-3.md
