--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,8 +90,9 @@ nav:
       - PadroesDeProjeto/GoFsComportamentais/index.md
       - State: PadroesDeProjeto/GoFsComportamentais/padraoState.md
       - Observer: PadroesDeProjeto/GoFsComportamentais/padraoObserver.md
-    - Participações: PadroesDeProjeto/Participacoes.md
+    - Padrão de Objeto Global:  PadroesDeProjeto/ObjetoGlobal.md
     - Iniciativas Extras: PadroesDeProjeto/IniciativasExtras.md
+    - Participações: PadroesDeProjeto/Participacoes.md
   - Arquitetura de Software & Reutilização:
     - ArquiteturaReutilizacao/index.md
     - Participações: ArquiteturaReutilizacao/Participacoes.md
