--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,7 +90,7 @@ nav:
       - PadroesDeProjeto/GoFsComportamentais/index.md
       - State: PadroesDeProjeto/GoFsComportamentais/padraoState.md
       - Observer: PadroesDeProjeto/GoFsComportamentais/padraoObserver.md
-    - Padrão de Objeto Global:  PadroesDeProjeto/ObjetoGlobal.md
+    - Padrão do Objeto Global:  PadroesDeProjeto/ObjetoGlobal.md
     - Iniciativas Extras: PadroesDeProjeto/IniciativasExtras.md
     - Participações: PadroesDeProjeto/Participacoes.md
   - Arquitetura de Software & Reutilização:
